[gd_scene load_steps=4 format=3 uid="uid://bekrnanblaq83"]

[ext_resource type="Script" path="res://Scripts/menu_script.gd" id="1_ysp4d"]
[ext_resource type="FontFile" uid="uid://dybhj5pc8e0n1" path="res://Fonts/Luckiest_Guy/LuckiestGuy-Regular.ttf" id="2_tibk2"]
[ext_resource type="FontFile" uid="uid://bj4dssu7l6lx7" path="res://Fonts/Itim/Itim-Regular.ttf" id="3_ptwsp"]

[node name="Main Menu UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ysp4d")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 121.0
offset_right = 687.0
offset_bottom = 464.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_tibk2")
theme_override_font_sizes/font_size = 86
text = "Potato-MAN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.5
offset_top = 142.5
offset_right = 152.5
offset_bottom = 219.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.431373, 0.431373, 0.431373, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_ptwsp")
theme_override_font_sizes/font_size = 56
text = "Continue"
flat = true

[node name="Start" type="Button" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.5
offset_top = 247.5
offset_right = 152.5
offset_bottom = 324.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.431373, 0.431373, 0.431373, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_ptwsp")
theme_override_font_sizes/font_size = 56
text = "Start Game"
flat = true

[node name="Settings" type="Button" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.5
offset_top = 349.5
offset_right = 152.5
offset_bottom = 434.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.431373, 0.431373, 0.431373, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_ptwsp")
theme_override_font_sizes/font_size = 56
text = "Settings"
flat = true

[node name="nr_1" type="Label" parent="Title/Settings"]
visible = false
layout_mode = 0
offset_left = 194.5
offset_top = 85.0
offset_right = 477.5
offset_bottom = 140.0
rotation = -0.383095
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_ptwsp")
theme_override_font_sizes/font_size = 40
text = "Nuh Uhhh!!!!"

[node name="Credits" type="Button" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.5
offset_top = 451.5
offset_right = 152.5
offset_bottom = 536.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.431373, 0.431373, 0.431373, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_ptwsp")
theme_override_font_sizes/font_size = 56
text = "Credits"
flat = true

[node name="nr_2" type="Label" parent="Title/Credits"]
visible = false
layout_mode = 0
offset_left = 194.5
offset_top = 85.0
offset_right = 477.5
offset_bottom = 140.0
rotation = -0.383095
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_ptwsp")
theme_override_font_sizes/font_size = 40
text = "Nuh Uhhh!!!!"

[node name="Exit" type="Button" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = 551.5
offset_right = 141.0
offset_bottom = 636.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.431373, 0.431373, 0.431373, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_ptwsp")
theme_override_font_sizes/font_size = 56
text = "Exit Game"
flat = true

[connection signal="pressed" from="Title/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Title/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Title/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Title/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Title/Exit" to="." method="_on_exit_pressed"]
